--- a/Simple_Ensemble_Techniques/Max Voting/Simargl2022_Max_Voting_tech.ipynb
+++ b/Simple_Ensemble_Techniques/Max Voting/Simargl2022_Max_Voting_tech.ipynb
@@ -2,26 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_730814/3441968052.py:9: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n",
-      "/tmp/ipykernel_730814/3441968052.py:17: DtypeWarning: Columns (29) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv('/home/ibibers@ads.iu.edu/IDS_Datasets/Combined_datasets/Simargl2022_combined_dataset.csv')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# -*- coding: utf-8 -*- \n",
     "# @Time : 2024/2/5 16:00\n",
@@ -34,6 +17,10 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import VotingClassifier\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "from sklearn.metrics import confusion_matrix\n",
     "import seaborn as sns\n",
@@ -46,12 +33,12 @@
     "\n",
     "# Drop columns that have just one unique value, the model wont learn form columns like this.\n",
     "one_value = main_df_1.columns[main_df_1.nunique() == 1]\n",
-    "main_df_2 = main_df_1.drop(columns = one_value, axis=1)\n"
+    "main_df_2 = main_df_1.drop(columns = one_value, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,22 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Extract subsample of data: \n",
-      "ALERT\n",
-      "Denial of Service    5138973\n",
-      "Port Scanning        4170194\n",
-      "Malware                  571\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Extract subsample of data\n",
     "print (\" Extract subsample of data: \")\n",
@@ -86,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,23 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_730814/2239558539.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  sample_df_1['ANOMALY'].fillna(median_anomaly, inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sample_df_1 = sample_df_1.drop(['ANOMALY', 'IPV4_SRC_ADDR'] , axis=1)\n",
     "median_anomaly = sample_df_1['ANOMALY'].median()\n",
@@ -169,30 +129,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_730814/2012478311.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  sample_df_1['ALERT'].fillna('Normal', inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sample_df_1['ALERT'].fillna('Normal', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,17 +168,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sampled Dataset Overview:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Sampled Dataset Overview:\")\n",
     "\n",
@@ -243,25 +181,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of samples before training: 19487254\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initial train test split set and split the dataset into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "\n",
-    "from sklearn.neural_network import MLPClassifier\n",
-    "# Initialize the MLPClassifier\n",
-    "nn_model = MLPClassifier(hidden_layer_sizes=(\n",
-    "    10,), max_iter=1000, random_state=42)\n",
+    "# Initialize the three models\n",
+    "LR_model = LogisticRegression(random_state=1)\n",
+    "dt_model = DecisionTreeClassifier(random_state=1)\n",
+    "Rd_model = RandomForestClassifier(random_state=1)\n",
+    "\n",
     "\n",
     "# Print the number of samples before training\n",
     "print(\"Number of samples before training:\", len(X_train))"
@@ -269,27 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Train the Decision Tree model\n",
-    "nn_model.fit(X_train, y_train)\n",
-    "\n",
-    "# Print the number of samples after training\n",
-    "print(\"Number of samples after training:\", len(X_train))"
+    "# initialize the voting classifier and specify the voting type to be hard voting\n",
+    "# the estimator parameter is a list containing the three models we have initialized\n",
+    "Vot_model = VotingClassifier(\n",
+    "    estimators=[('lr', LR_model), ('dt', dt_model)], voting='hard')\n",
+    "Vot_model.fit(X_train, y_train)\n",
+    "Vot_model.score(X_test, y_test)"
    ]
   },
   {
@@ -299,7 +219,7 @@
    "outputs": [],
    "source": [
     "# Make predictions on the test set\n",
-    "y_pred_encoded = nn_model.predict(X_test)"
+    "y_pred_encoded = Vot_model.predict(X_test)"
    ]
   },
   {
@@ -353,24 +273,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract weights from the first hidden layer\n",
-    "weights_first_hidden_layer = nn_model.coefs_[0]\n",
-    "\n",
-    "# Calculate feature importance based on the weights\n",
-    "feature_importance = np.abs(weights_first_hidden_layer).mean(axis=0)\n",
-    "\n",
-    "# Create a DataFrame for visualization\n",
-    "importance_dict = dict(zip(X.columns.values, feature_importance))\n",
+    "# importances of features in the decision tree model\n",
+    "importance = Vot_model.estimators_[1].feature_importances_\n",
+    "importance_dict = dict(zip(X.columns.values, importance))\n",
     "sorted_importance = dict(\n",
     "    sorted(importance_dict.items(), key=lambda x: x[1], reverse=True))\n",
     "\n",
-    "# Visualize the feature importance\n",
-    "plt.figure(figsize=(10, 6))\n",
+    "plt.figure(figsize=(7, 13))\n",
     "sns.barplot(x=list(sorted_importance.values()), y=list(\n",
-    "    sorted_importance.keys()), palette='mako')\n",
-    "plt.xlabel('Average Weight Magnitude in First Hidden Layer')\n",
+    "    sorted_importance.keys()), palette='cubehelix')\n",
+    "plt.xlabel('Importance Value')\n",
     "plt.ylabel('Feature Name')\n",
-    "plt.title('Feature Importance in MLPClassifier')\n",
+    "plt.title('Feature Importance in Random Forest Classifier')\n",
     "plt.show()"
    ]
   }
