Finished_prepare_Simargl_models

--- a/Advanced_Ens_tech/Boosting/CICIDS2017_Boosting_techn/Boosting/CICIDS2017_Boosting_technique/Adaptive_Boosting_technique.ipynb
+++ b/Advanced_Ens_tech/Boosting/CICIDS2017_Boosting_techn/Boosting/CICIDS2017_Boosting_technique/Adaptive_Boosting_technique.ipynb
@@ -448,8 +448,8 @@
     "sns.barplot(x=list(sorted_importance.values()), y=list(sorted_importance.keys()), palette='cubehelix')\n",
     "plt.xlabel('Importance Value')\n",
     "plt.ylabel('Feature Name')\n",
-    "plt.title('Feature Importance in Random Forest Classifier')\n",
-    "plt.show()\n"
+    "plt.title('Feature Importance in Adaptive Classifier')\n",
+    "plt.show()"
    ]
   }
  ],
