--- a/Advanced_Ens_tech/Boosting/Simargl2022_Boosting_tech/Sim_XGB_Extreme_Gradient_Boosting_tech.ipynb
+++ b/Advanced_Ens_tech/Boosting/Simargl2022_Boosting_tech/Sim_XGB_Extreme_Gradient_Boosting_tech.ipynb
@@ -2,26 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_844394/4239522922.py:9: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n",
-      "/tmp/ipykernel_844394/4239522922.py:20: DtypeWarning: Columns (29) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv('/home/ibibers@ads.iu.edu/IDS_Datasets/Combined_datasets/Simargl2022_combined_dataset.csv')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# -*- coding: utf-8 -*- \n",
     "# @Time : 2024/2/5 16:00\n",
@@ -34,9 +17,7 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "import xgboost as xgb\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "from sklearn.metrics import confusion_matrix\n",
     "import seaborn as sns\n",
@@ -54,33 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Take random samples of the dataset\n",
-    "sample_df_1 = main_df_2.sample(frac=0.6, random_state=42)\n",
-    "# sample_df_1 = main_df_2.copy()"
+    "# sample_df_1 = main_df_2.sample(frac=0.6, random_state=42)\n",
+    "sample_df_1 = main_df_2.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Extract subsample of data: \n",
-      "ALERT\n",
-      "Denial of Service    3084115\n",
-      "Port Scanning        2501567\n",
-      "Malware                  337\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Extract subsample of data\n",
     "print (\" Extract subsample of data: \")\n",
@@ -89,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,23 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_844394/2239558539.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  sample_df_1['ANOMALY'].fillna(median_anomaly, inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sample_df_1 = sample_df_1.drop(['ANOMALY', 'IPV4_SRC_ADDR'] , axis=1)\n",
     "median_anomaly = sample_df_1['ANOMALY'].median()\n",
@@ -172,30 +126,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_844394/2012478311.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  sample_df_1['ALERT'].fillna('Normal', inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sample_df_1['ALERT'].fillna('Normal', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,17 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sampled Dataset Overview:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Sampled Dataset Overview:\")\n",
     "\n",
@@ -246,26 +178,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of samples before training: 11692352\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initial train test split set and split the dataset into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "\n",
-    "# Initialize the Decision Tree model\n",
-    "# Initialize the models\n",
-    "model1 = DecisionTreeClassifier()\n",
-    "model2 = KNeighborsClassifier()\n",
-    "model3 = LogisticRegression()\n",
+    "# XGBoost XGBoost (extreme Gradient Boosting)\n",
+    "# XGBoost is an optimized distributed gradient boosting library designed to be highly efficient, flexible and portable.\n",
+    "# It implements machine learning algo\n",
+    "\n",
+    "xgb_model = xgb.XGBClassifier(\n",
+    "    random_state=42, learning_rate=0.01, objective='multi:softmax')\n",
+    "\n",
+    "# model=xgb.XGBClassifier(random_state=1,learning_rate=0.01)\n",
+    "xgb_model.fit(X_train, y_train)\n",
+    "xgb_model.score(X_test, y_test)\n",
+    "\n",
     "\n",
     "# Print the number of samples before training\n",
     "print(\"Number of samples before training:\", len(X_train))"
@@ -273,72 +203,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of samples after training: 11692352\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ibibers@ads.iu.edu/micromamba/lib/python3.9/site-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Train the models\n",
-    "model1.fit(X_train, y_train)\n",
-    "model2.fit(X_train, y_train)\n",
-    "model3.fit(X_train, y_train)\n",
-    "\n",
-    "# Print the number of samples after training\n",
-    "print(\"Number of samples after training:\", len(X_train))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Predict the models\n",
-    "pred1 = model1.predict_proba(X_test)\n",
-    "pred2 = model2.predict_proba(X_test)\n",
-    "pred3 = model3.predict_proba(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# final prediction using Simple Average (Soft Voting)\n",
-    "finalpred = (pred1 + pred2 + pred3) / 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "# Convert probabilities to class predictions\n",
-    "final_class_pred_enc = np.argmax(finalpred, axis=1)"
+    "y_pred_encoded = xgb_model.predict(X_test)"
    ]
   },
   {
@@ -348,7 +217,7 @@
    "outputs": [],
    "source": [
     "# Evaluate the model\n",
-    "accuracy = accuracy_score(y_test, final_class_pred_enc)\n",
+    "accuracy = accuracy_score(y_test, y_pred_encoded)\n",
     "print(f\"Accuracy: {accuracy}\")"
    ]
   },
@@ -360,7 +229,7 @@
    "source": [
     "#  Classificaiton Report \n",
     "print(\"\\nClassification Report:\")\n",
-    "print(classification_report(y_test, final_class_pred_enc))"
+    "print(classification_report(y_test, y_pred_encoded))\n"
    ]
   },
   {
@@ -369,12 +238,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "import numpy as np\n",
     "# Confusion matrix with string labels\n",
-    "conf_mat = confusion_matrix(y_test, final_class_pred_enc)\n",
+    "conf_mat = confusion_matrix(y_test, y_pred_encoded)\n",
     "\n",
     "# Get unique class labels from y_test and y_pred_encoded\n",
-    "unique_labels = np.unique(np.concatenate((y_test, final_class_pred_enc)))\n",
+    "unique_labels = np.unique(np.concatenate((y_test, y_pred_encoded)))\n",
     "\n",
     "# Plotting the Confusion Matrix with class labels\n",
     "plt.figure(figsize=(6, 6))\n",
@@ -383,6 +252,27 @@
     "plt.title('Confusion Matrix')\n",
     "plt.xlabel('Predicted')\n",
     "plt.ylabel('Actual')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importances of features in the decision tree model\n",
+    "importance = xgb_model.feature_importances_\n",
+    "importance_dict = dict(zip(X.columns.values, importance))\n",
+    "sorted_importance = dict(\n",
+    "    sorted(importance_dict.items(), key=lambda x: x[1], reverse=True))\n",
+    "\n",
+    "plt.figure(figsize=(7, 13))\n",
+    "sns.barplot(x=list(sorted_importance.values()), y=list(\n",
+    "    sorted_importance.keys()), palette='cubehelix')\n",
+    "plt.xlabel('Importance Value')\n",
+    "plt.ylabel('Feature Name')\n",
+    "plt.title('Feature Importance in Random Forest Classifier')\n",
     "plt.show()"
    ]
   }
