--- a/Individual_Models_Tech/Simargl2022_Individual_models/lr_model.ipynb
+++ b/Individual_Models_Tech/Simargl2022_Individual_models/lr_model.ipynb
@@ -97,11 +97,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sample_df_1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43msample_df_1\u001b[49m\u001b[38;5;241m.\u001b[39minfo()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sample_df_1' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# sample_df_1.info()"
+    "sample_df_1.info()"
    ]
   },
   {
