--- a/Individual_Models_Tech/Simargl2022_Individual_models/nn_model.ipynb
+++ b/Individual_Models_Tech/Simargl2022_Individual_models/nn_model.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_730814/3441968052.py:9: DeprecationWarning: \n",
+      "/tmp/ipykernel_744746/3441968052.py:9: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -17,7 +17,7 @@
       "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
       "        \n",
       "  import pandas as pd\n",
-      "/tmp/ipykernel_730814/3441968052.py:17: DtypeWarning: Columns (29) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_744746/3441968052.py:17: DtypeWarning: Columns (29) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('/home/ibibers@ads.iu.edu/IDS_Datasets/Combined_datasets/Simargl2022_combined_dataset.csv')\n"
      ]
     }
@@ -88,19 +88,97 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     FLOW_ID PROTOCOL_MAP  L4_SRC_PORT   IPV4_SRC_ADDR  L4_DST_PORT  \\\n",
+      "0  334626451          tcp        50242  10.114.241.191          443   \n",
+      "1  334626948          tcp        50244  10.114.241.191          443   \n",
+      "2  334627641          tcp        50246  10.114.241.191          443   \n",
+      "3  334628195          tcp        50248  10.114.241.191          443   \n",
+      "4  334628673          tcp        54328  10.114.241.191          443   \n",
+      "\n",
+      "   IPV4_DST_ADDR  FIRST_SWITCHED  FLOW_DURATION_MILLISECONDS  LAST_SWITCHED  \\\n",
+      "0  10.114.224.73      1647344604                         105     1647344604   \n",
+      "1  10.114.224.73      1647344609                           6     1647344609   \n",
+      "2  10.114.224.73      1647344614                         111     1647344614   \n",
+      "3  10.114.224.73      1647344619                           6     1647344619   \n",
+      "4  10.114.224.73      1647344534                      110000     1647344644   \n",
+      "\n",
+      "   PROTOCOL  ...  SRC_TOS  DST_TOS  TOTAL_FLOWS_EXP  IN_BYTES  IN_PKTS  \\\n",
+      "0         6  ...        0        0        334626451       551        5   \n",
+      "1         6  ...        0        0        334626948       551        5   \n",
+      "2         6  ...        0        0        334627641       551        5   \n",
+      "3         6  ...        0        0        334628195       551        5   \n",
+      "4         6  ...        0        0        334628673      1309       12   \n",
+      "\n",
+      "   OUT_BYTES  OUT_PKTS              ALERT  ANALYSIS_TIMESTAMP  ANOMALY  \n",
+      "0        192         4  Denial of Service          1647344695      NaN  \n",
+      "1        192         4  Denial of Service          1647344695      NaN  \n",
+      "2        192         4  Denial of Service          1647344695      NaN  \n",
+      "3        192         4  Denial of Service          1647344695      NaN  \n",
+      "4        624        12  Denial of Service          1647344695      NaN  \n",
+      "\n",
+      "[5 rows x 28 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Git the features\n",
-    "# print (main_df_2.head())"
+    "print (main_df_2.head())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 24359068 entries, 0 to 30148257\n",
+      "Data columns (total 28 columns):\n",
+      " #   Column                      Dtype  \n",
+      "---  ------                      -----  \n",
+      " 0   FLOW_ID                     int64  \n",
+      " 1   PROTOCOL_MAP                object \n",
+      " 2   L4_SRC_PORT                 int64  \n",
+      " 3   IPV4_SRC_ADDR               object \n",
+      " 4   L4_DST_PORT                 int64  \n",
+      " 5   IPV4_DST_ADDR               object \n",
+      " 6   FIRST_SWITCHED              int64  \n",
+      " 7   FLOW_DURATION_MILLISECONDS  int64  \n",
+      " 8   LAST_SWITCHED               int64  \n",
+      " 9   PROTOCOL                    int64  \n",
+      " 10  TCP_FLAGS                   int64  \n",
+      " 11  TCP_WIN_MAX_IN              int64  \n",
+      " 12  TCP_WIN_MAX_OUT             int64  \n",
+      " 13  TCP_WIN_MIN_IN              int64  \n",
+      " 14  TCP_WIN_MIN_OUT             int64  \n",
+      " 15  TCP_WIN_MSS_IN              int64  \n",
+      " 16  TCP_WIN_SCALE_IN            int64  \n",
+      " 17  TCP_WIN_SCALE_OUT           int64  \n",
+      " 18  SRC_TOS                     int64  \n",
+      " 19  DST_TOS                     int64  \n",
+      " 20  TOTAL_FLOWS_EXP             int64  \n",
+      " 21  IN_BYTES                    int64  \n",
+      " 22  IN_PKTS                     int64  \n",
+      " 23  OUT_BYTES                   int64  \n",
+      " 24  OUT_PKTS                    int64  \n",
+      " 25  ALERT                       object \n",
+      " 26  ANALYSIS_TIMESTAMP          int64  \n",
+      " 27  ANOMALY                     float64\n",
+      "dtypes: float64(1), int64(23), object(4)\n",
+      "memory usage: 5.3+ GB\n"
+     ]
+    }
+   ],
    "source": [
-    "# sample_df_1.info()"
+    "sample_df_1.info()"
    ]
   },
   {
@@ -144,14 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_730814/2239558539.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/tmp/ipykernel_744746/2239558539.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -169,14 +247,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_730814/2012478311.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/tmp/ipykernel_744746/2012478311.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -192,7 +270,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Extract subsample of data: \n",
+      "ALERT\n",
+      "Normal               15049330\n",
+      "Denial of Service     5138973\n",
+      "Port Scanning         4170194\n",
+      "Malware                   571\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extract subsample of data\n",
+    "print(\" Extract subsample of data: \")\n",
+    "print(sample_df_1['ALERT'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
