parall_work_using_GPUs

--- a/Simple_Ensemble_Techniques/Base_model.ipynb
+++ b/Simple_Ensemble_Techniques/Base_model.ipynb
@@ -2,6 +2,160 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num GPUs Available:  0\n",
+      "Running on GPU\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "# Check if GPU is available\n",
+    "print(\"Num GPUs Available: \", len(\n",
+    "    tf.config.experimental.list_physical_devices('GPU')))\n",
+    "\n",
+    "# Run on GPU if available\n",
+    "with tf.device('/GPU:1'):\n",
+    "    print(\"Running on GPU\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA Available:  True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "# Check if GPU is available\n",
+    "print(\"CUDA Available: \", torch.cuda.is_available())\n",
+    "\n",
+    "# # Run on GPU if available\n",
+    "# device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "# model.to(device)\n",
+    "# data = data.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-25 23:39:57.042563: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-02-25 23:39:57.211052: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-02-25 23:39:57.211205: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-02-25 23:39:57.232831: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-02-25 23:39:57.284220: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-02-25 23:39:57.995600: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[name: \"/device:CPU:0\"\n",
+      "device_type: \"CPU\"\n",
+      "memory_limit: 268435456\n",
+      "locality {\n",
+      "}\n",
+      "incarnation: 13990608776594614655\n",
+      "xla_global_id: -1\n",
+      ", name: \"/device:GPU:0\"\n",
+      "device_type: \"GPU\"\n",
+      "memory_limit: 49138696192\n",
+      "locality {\n",
+      "  bus_id: 1\n",
+      "  links {\n",
+      "    link {\n",
+      "      device_id: 1\n",
+      "      type: \"StreamExecutor\"\n",
+      "      strength: 1\n",
+      "    }\n",
+      "  }\n",
+      "}\n",
+      "incarnation: 10644658878661548631\n",
+      "physical_device_desc: \"device: 0, name: NVIDIA RTX A6000, pci bus id: 0000:67:00.0, compute capability: 8.6\"\n",
+      "xla_global_id: 416903419\n",
+      ", name: \"/device:GPU:1\"\n",
+      "device_type: \"GPU\"\n",
+      "memory_limit: 49077551104\n",
+      "locality {\n",
+      "  bus_id: 1\n",
+      "  links {\n",
+      "    link {\n",
+      "      type: \"StreamExecutor\"\n",
+      "      strength: 1\n",
+      "    }\n",
+      "  }\n",
+      "}\n",
+      "incarnation: 17237942100559799677\n",
+      "physical_device_desc: \"device: 1, name: NVIDIA RTX A6000, pci bus id: 0000:68:00.0, compute capability: 8.6\"\n",
+      "xla_global_id: 2144165316\n",
+      "]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-25 23:39:59.172993: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /device:GPU:0 with 46862 MB memory:  -> device: 0, name: NVIDIA RTX A6000, pci bus id: 0000:67:00.0, compute capability: 8.6\n",
+      "2024-02-25 23:39:59.173672: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /device:GPU:1 with 46804 MB memory:  -> device: 1, name: NVIDIA RTX A6000, pci bus id: 0000:68:00.0, compute capability: 8.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pip install tensorflow-gpu\n",
+    "from tensorflow.python.client import device_lib\n",
+    "print(device_lib.list_local_devices())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num GPUs Available:  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "# Check GPU availability\n",
+    "physical_devices = tf.config.list_physical_devices('GPU')\n",
+    "print(\"Num GPUs Available: \", len(physical_devices))\n",
+    "\n",
+    "# Set TensorFlow to use GPU if available\n",
+    "if len(physical_devices) > 0:\n",
+    "    tf.config.experimental.set_memory_growth(physical_devices[0], True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
    "outputs": [],
