--- a/Advanced_Ens_tech/Boosting/Simargl2022_Boosting_tech/Sim_CatBoost_Boosting_tech.ipynb
+++ b/Advanced_Ens_tech/Boosting/Simargl2022_Boosting_tech/Sim_CatBoost_Boosting_tech.ipynb
@@ -283,6 +283,151 @@
     "plt.title('Feature Importance in Random Forest Classifier')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from catboost import CatBoostClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import seaborn as sns\n",
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv(\n",
+    "    '/home/ibibers@ads.iu.edu/IDS_Datasets/Combined_datasets/Simargl_cleaned_data.csv')\n",
+    "\n",
+    "tf.keras.backend.clear_session()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropped_df = ['ALERT']\n",
+    "X = df.drop(dropped_df, axis=1)\n",
+    "y = df['ALERT']\n",
+    "\n",
+    "label_encoder = LabelEncoder()\n",
+    "y_encoded = label_encoder.fit_transform(y)\n",
+    "\n",
+    "# Initial train test split set and split the dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y_encoded, test_size=0.2, random_state=42, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert data to TensorFlow tensors\n",
+    "X_train_tf = tf.convert_to_tensor(X_train.values, dtype=tf.float32)\n",
+    "y_train_tf = tf.convert_to_tensor(pd.factorize(y_train)[0], dtype=tf.int64)\n",
+    "X_test_tf = tf.convert_to_tensor(X_test.values, dtype=tf.float32)\n",
+    "\n",
+    "# Initialize MirroredStrategy for GPU acceleration\n",
+    "strategy = tf.distribute.MirroredStrategy()\n",
+    "\n",
+    "#  CatBoost Classifier\n",
+    "# CatBoost is a machine learning algorithm that uses gradient boosting on decision trees.\n",
+    "cat = CatBoostClassifier()\n",
+    "\n",
+    "\n",
+    "# Train the models\n",
+    "with strategy.scope():\n",
+    "    # Train the model\n",
+    "    cat.fit(X_train, y_train)\n",
+    "    # Make predictions on the test set\n",
+    "    y_pred_encoded = cat.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluate the model\n",
+    "accuracy = accuracy_score(y_test, y_pred_encoded)\n",
+    "print(f\"Accuracy: {accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use inverse_transform to get original labels\n",
+    "y_pred = label_encoder.inverse_transform(y_pred_encoded)\n",
+    "y_test_labels = label_encoder.inverse_transform(y_test)\n",
+    "\n",
+    "# Classification Report\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test_labels, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Confusion matrix with string labels\n",
+    "conf_mat = confusion_matrix(y_test_labels, y_pred)\n",
+    "\n",
+    "# Get unique class labels from y_test and y_pred_encoded\n",
+    "unique_labels = np.unique(np.concatenate(\n",
+    "    (y_test_labels, y_pred)))\n",
+    "\n",
+    "# Plotting the Confusion Matrix with class labels\n",
+    "plt.figure(figsize=(6, 6))\n",
+    "sns.heatmap(conf_mat, annot=True, fmt=\"d\", cmap=\"Blues\", cbar=False,\n",
+    "            xticklabels=unique_labels, yticklabels=unique_labels)\n",
+    "plt.title('Confusion Matrix')\n",
+    "plt.xlabel('Predicted')\n",
+    "plt.ylabel('Actual')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importances of features in the decision tree model\n",
+    "importance = cat.feature_importances_\n",
+    "importance_dict = dict(zip(X.columns.values, importance))\n",
+    "sorted_importance = dict(\n",
+    "    sorted(importance_dict.items(), key=lambda x: x[1], reverse=True))\n",
+    "\n",
+    "plt.figure(figsize=(7, 13))\n",
+    "sns.barplot(x=list(sorted_importance.values()), y=list(\n",
+    "    sorted_importance.keys()), palette='cubehelix')\n",
+    "plt.xlabel('Importance Value')\n",
+    "plt.ylabel('Feature Name')\n",
+    "plt.title('Feature Importance in Random Forest Classifier')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
