--- a/Advanced_Ens_tech/Boosting/Simargl2022_Boosting_tech/Sim_Light_GBM_Boosting_tech.ipynb
+++ b/Advanced_Ens_tech/Boosting/Simargl2022_Boosting_tech/Sim_Light_GBM_Boosting_tech.ipynb
@@ -267,6 +267,186 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1728964/3663230059.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n",
+      "2024-02-26 15:44:08.898906: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-02-26 15:44:08.934941: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-02-26 15:44:08.934977: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-02-26 15:44:08.936117: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-02-26 15:44:08.941988: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-02-26 15:44:09.743017: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import StackingClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "import lightgbm as lgb\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import seaborn as sns\n",
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv(\n",
+    "    '/home/ibibers@ads.iu.edu/IDS_Datasets/Combined_datasets/Simargl_cleaned_data.csv')\n",
+    "\n",
+    "tf.keras.backend.clear_session()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropped_df = ['ALERT']\n",
+    "X = df.drop(dropped_df, axis=1)\n",
+    "y = df['ALERT']\n",
+    "\n",
+    "label_encoder = LabelEncoder()\n",
+    "y_encoded = label_encoder.fit_transform(y)\n",
+    "\n",
+    "# Initial train test split set and split the dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y_encoded, test_size=0.2, random_state=42, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert data to TensorFlow tensors\n",
+    "X_train_tf = tf.convert_to_tensor(X_train.values, dtype=tf.float32)\n",
+    "y_train_tf = tf.convert_to_tensor(pd.factorize(y_train)[0], dtype=tf.int64)\n",
+    "X_test_tf = tf.convert_to_tensor(X_test.values, dtype=tf.float32)\n",
+    "\n",
+    "# Initialize MirroredStrategy for GPU acceleration\n",
+    "strategy = tf.distribute.MirroredStrategy()\n",
+    "\n",
+    "\n",
+    "# AdaBoost is a boosting algorithm which creates a strong classifier from a number of weak classifiers.\n",
+    "AdaB_model = AdaBoostClassifier(random_state=46)\n",
+    "\n",
+    "\n",
+    "# Train the models\n",
+    "with strategy.scope():\n",
+    "    \n",
+    "    # Light GBM Light GBM beats all the other algorithms when the dataset is extremely large.\n",
+    "    train_data = lgb.Dataset(X_train, label=y_train)\n",
+    "    # define parameters\n",
+    "    # params = {'learning_rate':0.001}\n",
+    "    params = {\n",
+    "        'learning_rate': 0.001,\n",
+    "        'num_leaves': 31,\n",
+    "        'max_depth': -1,\n",
+    "        'min_child_samples': 20,\n",
+    "        # Add other parameters as needed\n",
+    "    }\n",
+    "\n",
+    "    # lgb_model= lgb.train(params, train_data, 100)\n",
+    "    lgb_model = lgb.train(params, train_data, num_boost_round=200)\n",
+    "\n",
+    "    # Make predictions on the test set\n",
+    "    y_pred = lgb_model.predict(X_test)\n",
+    "\n",
+    "    # Threshold the predicted probabilities at 0.5 to obtain binary predictions\n",
+    "    y_pred_encoded = [1 if prob >= 0.5 else 0 for prob in y_pred]\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluate the model\n",
+    "accuracy = accuracy_score(y_test, y_pred_encoded)\n",
+    "print(f\"Accuracy: {accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y_pred_encoded' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Use inverse_transform to get original labels\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m label_encoder\u001b[38;5;241m.\u001b[39minverse_transform(\u001b[43my_pred_encoded\u001b[49m)\n\u001b[1;32m      3\u001b[0m y_test_labels \u001b[38;5;241m=\u001b[39m label_encoder\u001b[38;5;241m.\u001b[39minverse_transform(y_test)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Classification Report\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'y_pred_encoded' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Use inverse_transform to get original labels\n",
+    "y_pred = label_encoder.inverse_transform(y_pred_encoded)\n",
+    "y_test_labels = label_encoder.inverse_transform(y_test)\n",
+    "\n",
+    "# Classification Report\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test_labels, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Confusion matrix with string labels\n",
+    "conf_mat = confusion_matrix(y_test_labels, y_pred)\n",
+    "\n",
+    "# Get unique class labels from y_test and y_pred_encoded\n",
+    "unique_labels = np.unique(np.concatenate(\n",
+    "    (y_test_labels, y_pred)))\n",
+    "\n",
+    "# Plotting the Confusion Matrix with class labels\n",
+    "plt.figure(figsize=(6, 6))\n",
+    "sns.heatmap(conf_mat, annot=True, fmt=\"d\", cmap=\"Blues\", cbar=False,\n",
+    "            xticklabels=unique_labels, yticklabels=unique_labels)\n",
+    "plt.title('Confusion Matrix')\n",
+    "plt.xlabel('Predicted')\n",
+    "plt.ylabel('Actual')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
